--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-    <link rel="stylesheet" href="assets\style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Crypto-Tycoon</title>
 </head>
 <body>
@@ -15,6 +15,6 @@
       Your browser does not support the video tag.
       </video>
 
-    <script src="assets\script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
