--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Crypto-Tycoon</title>
 </head>
 <body>
     <h1>Crypto-Tycoon</h1>
-    <script src="./assets/js/script.js"></script>
+    <video width="420" height="320" controls>
+        <source src="assets\Untitled.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+
+    <script src="./assets/script.js"></script>
 </body>
 </html>
