setting up shop declarations

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
     <h1>Crypto-Tycoon</h1>
     <video width="420" height="320" controls>
-        <source src="assets\Untitled.mp4" type="video/mp4">
+        <source src="./assets/Untitled.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
 
     <script src="./assets/script.js"></script>
+    <script src="./assets/shop.js"></script>
 </body>
 </html>
