--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <source src="./assets/Untitled.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./assets/script.js"></script>
     <script src="./assets/shop.js"></script>
 </body>
