minor table styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css" />
     <title>Crypto-Tycoon</title>
+    
 </head>
 <body>
     <h1>Crypto-Tycoon</h1>
@@ -14,10 +15,10 @@
         <source src="./assets/Untitled.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-
-<h1>WELCOME TO COMPUTER PLUS!</h1>
+      <h1>WELCOME TO COMPUTER PLUS!</h1>
+      <div id="shopContainer">
 <h2>VIDEO CARDS</h2>
-<div class="container1">
+<div id="container1" class="column">
       <p id="1"><a class="button">Asus gt 1030 2gb:     $125</a></p>
       <p id="2"><a class="button">Asus GTX 1050Ti :     $300</a></p>
       <p id="3"><a class="button">Asus RTX 2060   :     $650</a></p>
@@ -26,7 +27,7 @@
       <p id="6"><a class="button">NVIDIA RTX 3080Ti:    $5000</a></p>
     </div>
     <h2>PROCESSORS</h2>
-    <div class="container2">
+    <div id="container2" class="column">
         <p id="7"><a class="button">AMD ryzen 3:             $200</a></p>
         <p id="8"><a class="button">AMD ryzen 5:             $300</a></p>
         <p id="9"><a class="button">AMD ryzen 7:             $400</a></p>
@@ -35,7 +36,7 @@
         <p id="12"><a class="button">THA SHREDDER:            $5000</a></p>
     </div>
     <h2>MOTHER BOARDS</h2>
-    <div class="container3">
+    <div id="container3" class="column">
         <p id="13"><a class="button">ASUS b450:        $150</a></p>
         <p id="14"><a class="button">ASUS b550:        $250</a></p>
         <p id="15"><a class="button">ASUS x570:        $350</a></p>
@@ -43,10 +44,11 @@
         <p id="17"><a class="button">AORUS XTREME:     $2000</a></p>
         <p id="18"><a class="button">MEGAVBOARD:       $5000</a></p>
     </div>
-    </body>
+</div>
+</body>
+<script src="./assets/shop.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="./assets/script.js"></script>
-    <script src="./assets/shop.js"></script>
 </html>
