--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <title>Crypto-Tycoon</title>
 </head>
 <body>
-    <h1>Crypto-Tycoon</h1>
-    <video width="420" height="320" controls>
-        <source src="assets\Untitled.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-      </video>
+        <h1>Crypto-Tycoon</h1>
+        <video width="420" height="320" controls autoplay>
+            <source src="assets\Untitled.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
 
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./assets/script.js"></script>
 </body>
 </html>
