--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Crypto-Tycoon</h1>
-    <video width="420" height="320" controls>
+    <video width="420" height="320" controls autoplay>
         <source src="./assets/Untitled.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
