Added a bunch of tester code trying out the API
Added functions to increment and convert to USD

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <h1>Crypto-Tycoon</h1>
-    <video width="420" height="320" controls>
+    <video controls autoplay width="420" height="320" controls autoplay>
         <source src="assets\Untitled.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./assets/script.js"></script>
 </body>
 </html>
