--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
 </head>
 <body>
     <h1>Crypto-Tycoon</h1>
-    <video width="420" height="320" controls autoplay>
-        <source src="./assets/Untitled.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <div class="container" id="crypto">
+        <div class="center">
+            <video width="420" height="320" controls>
+                <source src="assets\Untitled.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video>
+              </div>
+              <button class="begin" id="startGame">Start Game</button>
 
+    </div>
+    
     <body class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
@@ -67,7 +73,7 @@
               </div>
             </div>
           </nav>
-          
+
     <h1>WELCOME TO COMPUTER PLUS!</h1>
     <div id="shopContainer">
         <h2>VIDEO CARDS</h2>
