Added change in price color to marquee  value

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    <marquee id = "marquee" direction="right" style="color:wheat"></marquee>
+    <marquee id = "marquee" direction="right">DOGE:<h3 id = "innerMarquee"></h3></marquee>
     <body class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
