--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <marquee id = "marquee" direction="left">
-        DOGE Price Change: 15 Minutes
+        <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>Price Change - 15 Minutes:
         <h3 id = "innerMarquee"></h3>
     </marquee>
     <body class="hero">
