--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
 </head>
 <body>
     <marquee id = "marquee" direction="left">
-        <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>Price Change - 15 Minutes:
-        <h3 id = "innerMarquee"></h3>
+        <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
+        Price Changes - 15 Minutes:
+        <h3 id = "innerMarquee15m"></h3>
+        1 Hour:
+        <h3 id = "innerMarquee1h"></h3>
+        1 Day:
+        <h3 id = "innerMarquee1d"></h3>
+        <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
     </marquee>
     <body class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
