Dynamic Tweets Created

--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
         <h3 id = "innerMarquee1d"></h3>
         <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
     </marquee>
-    <!-- <aside class = "columns">
-        <marquee id = "marquee2" class = "column is-4" direction ="up">
-        </marquee>
-    </aside> -->
     <body class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
@@ -87,10 +83,6 @@
                   <button class="begin" id="startGame">Start Game</button>
     
         </div>
-        <aside class = "">
-            <marquee id = "marquee2" class = "" direction ="left">
-            </marquee>
-        </aside>
         <div id="shopContainer">
         <h1>WELCOME TO COMPUTER PLUS!</h1>
         <h2>VIDEO CARDS</h2>
@@ -121,8 +113,8 @@
             <p id="18"><a class="button">MEGAVBOARD:       $5000</a></p>
         </div>
     </div>
-<aside class = "">
-            <marquee id = "marquee2" class = "" direction ="left">
+<aside class = "column">
+            <marquee id = "marquee2" class = "" direction ="up">
             </marquee>
         </aside>
 </body>
