Formatting of marquee2 to appear better on page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h3 id = "innerMarquee1d"></h3>
         <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
     </marquee>
-    <body class="hero">
+    <div class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://bulma.io">
@@ -113,10 +113,10 @@
             <p id="18"><a class="button">MEGAVBOARD:       $5000</a></p>
         </div>
     </div>
-<aside class = "column">
-            <marquee id = "marquee2" class = "" direction ="up">
-            </marquee>
-        </aside>
+    <aside class = "">
+        <marquee id = "marquee2" class = "grids row" direction ="up">
+        </marquee>
+    </aside>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
