--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 About
                             </a>
                             <a class="navbar-item">
-                                Rules
+                                Shop
                             </a>
                             <a class="navbar-item">
                                 Enjoy!
