--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 </head>
 
 <body>
-    <marquee id="marquee1" direction="left">
-        <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
+
+    <marquee id = "marquee1" direction="left">
+        <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
         Price Changes - 15 Minutes:
-        <h3 id="innerMarquee15m"></h3>
+        <h3 id = "innerMarquee15m"></h3>
         1 Hour:
-        <h3 id="innerMarquee1h"></h3>
+        <h3 id = "innerMarquee1h"></h3>
         1 Day:
-        <h3 id="innerMarquee1d"></h3>
-        <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
+        <h3 id = "innerMarquee1d"></h3>
+        <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
+
     </marquee>
     <div class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
@@ -75,6 +77,8 @@
             </div>
         </nav>
         <h1>Crypto-Tycoon</h1>
+      
+
 
         <div class="container" id="crypto">
             <div class="center">
@@ -116,10 +120,13 @@
                 <p id="18"><a class="button">MEGAVBOARD: $5000</a></p>
             </div>
         </div>
-        <aside class="">
-            <marquee id="marquee2" class="grids row" direction="up">
-            </marquee>
-        </aside>
+
+    </div>
+    <aside class = "">
+        <marquee id = "marquee2" class = "grids row" direction ="up">
+        </marquee>
+    </aside>
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
