--- a/index.html
+++ b/index.html
@@ -40,25 +40,26 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item">
+                    <a class="navbar-item" >
                         Home
                     </a>
+                    
+                    <a class="navbar-item" >
+                          Shop
 
-                    <a class="navbar-item">
-                        How to Play
-                    </a>
+                   
 
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link">
-                            Shop
+                            How To Play
                         </a>
 
                         <div class="navbar-dropdown">
-                            <a class="navbar-item">
-                                About
+                            <a class="navbar-item"href="howtoplay.html" >
+                                How to Play
                             </a>
                             <a class="navbar-item">
-                                Rules
+                                About
                             </a>
                             <a class="navbar-item">
                                 Enjoy!
