--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
                   </video>
                   </div>
                   <button class="begin" id="startGame">Start Game</button>
-    
+
+     <section class="inline">
+      <div></div>
+      <button id="shop" class="begin">shop</button>
+      <button id="convert" class="begin">convert</button>
+    </section>
         </div>
         
         <div id="shopContainer">
