--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
 <body>
 
-    <marquee id = "marquee1" direction="left">
-        <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
+    <marquee id="marquee1" direction="left">
+        <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
         Price Changes - 15 Minutes:
-        <h3 id = "innerMarquee15m"></h3>
+        <h3 id="innerMarquee15m"></h3>
         1 Hour:
-        <h3 id = "innerMarquee1h"></h3>
+        <h3 id="innerMarquee1h"></h3>
         1 Day:
-        <h3 id = "innerMarquee1d"></h3>
-        <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
+        <h3 id="innerMarquee1d"></h3>
+        <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
 
     </marquee>
     <div class="hero">
@@ -77,7 +77,7 @@
             </div>
         </nav>
         <h1>Crypto-Tycoon</h1>
-      
+
 
 
         <div class="container" id="crypto">
@@ -88,8 +88,19 @@
                 </video>
             </div>
             <button class="begin" id="startGame">Start Game</button>
-
         </div>
+
+        <div id="howToPlaypge">
+            <h1>How To Play!</h1>
+            <h2 class="htp">Welcome to Crypto-Tycoon!
+                <p> The game that scratches that crypto itch!!</p>
+            </h2>
+            <p>The rules are simple!</p>
+            <p> Click the convert button to change your USD to Doge coin.</p>
+            <p> Use the shop to purchase more currency, and other upgrades that improves your conversion rates!</p>
+            <p>and the most important rule of all......HAVE FUN!!! WOOOO!!!</p>
+        </div>
+
         <div id="shopContainer">
             <h1>WELCOME TO COMPUTER PLUS!</h1>
             <h2>VIDEO CARDS</h2>
@@ -122,8 +133,8 @@
         </div>
 
     </div>
-    <aside class = "">
-        <marquee id = "marquee2" class = "grids row" direction ="up">
+    <aside class="">
+        <marquee id="marquee2" class="grids row" direction="up">
         </marquee>
     </aside>
 
