fixed dataset values

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <p id="15"><a class="button">ASUS x570: $350</a></p>
                 <p id="16"><a class="button">ASUS Godlike 570: $700</a></p>
                 <p id="17"><a class="button">AORUS XTREME: $2000</a></p>
-                <p id="18"><a class="button">MEGAVBOARD: $5000</a></p>
+                <p ><a class="button" id="18">MEGAVBOARD: $5000</a></p>
             </div>
         </div>
 
