more minor tweaks

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                         Home
                     </a>
 
-                    <a class="navbar-item">
+                    <a  id="HTPbtn" class="navbar-item">
                         How to Play
                     </a>
 
                     <div class="navbar-item has-dropdown is-hoverable">
-                        <a id="shopBtn" class="navbar-link">
+                        <a id="shopBtn" class="navbar-item">
                             Shop
                         </a>
 
