--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+    <div class="btn-group">
+        
+        <button id="shop" class="">shop</button>
+        <button id="convert" class="">convert</button>
+    </div>
 
     <marquee id = "marquee1" direction="left">
         <img id ="dogeTicker" src = "./assets/images/Dogecoin-ticker.jpg"/>
