--- a/howtoplay.html
+++ b/howtoplay.html
@@ -84,4 +84,9 @@
 
     <img class = "dogedude" src="./assets/images/Dogedudefrontpage.jpg">
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="./assets/script.js"></script>
+<script src="./assets/shop.js"></script>
+
 </html>
