--- a/index.html
+++ b/index.html
@@ -108,35 +108,35 @@
             <h1>WELCOME TO COMPUTER PLUS!</h1>
             <h2>VIDEO CARDS</h2>
             <div id="container1" class="column">
-                <p id="1"><a class="button">Asus gt 1030 2gb: $125</a></p>
-                <p id="2"><a class="button">Asus GTX 1050Ti : $300</a></p>
-                <p id="3"><a class="button">Asus RTX 2060 : $650</a></p>
-                <p id="4"><a class="button">Asus 6700 XT: $1300</a></p>
-                <p id="5"><a class="button">Saphire RX 6900: $2600</a></p>
-                <p id="6"><a class="button">NVIDIA RTX 3080Ti: $5000</a></p>
+                <p ><a class="button" id="1">Asus gt 1030 2gb: $125</a></p>
+                <p ><a class="button" id="2">Asus GTX 1050Ti : $300</a></p>
+                <p ><a class="button" id="3">Asus RTX 2060 : $650</a></p>
+                <p ><a class="button" id="4">Asus 6700 XT: $1300</a></p>
+                <p ><a class="button" id="5">Saphire RX 6900: $2600</a></p>
+                <p ><a class="button" id="6">NVIDIA RTX 3080Ti: $5000</a></p>
             </div>
             <h2>PROCESSORS</h2>
             <div id="container2" class="column">
-                <p id="7"><a class="button">AMD ryzen 3: $200</a></p>
-                <p id="8"><a class="button">AMD ryzen 5: $300</a></p>
-                <p id="9"><a class="button">AMD ryzen 7: $400</a></p>
-                <p id="10"><a class="button">AMD ryzen 9: $800</a></p>
-                <p id="11"><a class="button">AMD threadripper 3960x : $1500</a></p>
-                <p id="12"><a class="button">THA SHREDDER: $5000</a></p>
+                <p ><a class="button" id="7">AMD ryzen 3: $200</a></p>
+                <p ><a class="button" id="8">AMD ryzen 5: $300</a></p>
+                <p ><a class="button" id="9">AMD ryzen 7: $400</a></p>
+                <p ><a class="button" id="10">AMD ryzen 9: $800</a></p>
+                <p ><a class="button" id="11">AMD threadripper 3960x : $1500</a></p>
+                <p ><a class="button" id="12">THA SHREDDER: $5000</a></p>
             </div>
             <h2>MOTHER BOARDS</h2>
             <div id="container3" class="column">
-                <p id="13"><a class="button">ASUS b450: $150</a></p>
-                <p id="14"><a class="button">ASUS b550: $250</a></p>
-                <p id="15"><a class="button">ASUS x570: $350</a></p>
-                <p id="16"><a class="button">ASUS Godlike 570: $700</a></p>
-                <p id="17"><a class="button">AORUS XTREME: $2000</a></p>
-                <p id="18"><a class="button">MEGAVBOARD: $5000</a></p>
+                <p ><a class="button" id="13">ASUS b450: $150</a></p>
+                <p ><a class="button" id="14">ASUS b550: $250</a></p>
+                <p ><a class="button" id="15">ASUS x570: $350</a></p>
+                <p ><a class="button" id="16">ASUS Godlike 570: $700</a></p>
+                <p ><a class="button" id="17">AORUS XTREME: $2000</a></p>
+                <p ><a class="button" id="18">MEGAVBOARD: $5000</a></p>
             </div>
         </div>
 
     </div>
-    <aside class="">
+    <aside class="asideContainer">
         <marquee id="marquee2" class="grids row" direction="up">
         </marquee>
     </aside>
