--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 </head>
 
 <body>
-   
-
-
+  
     <marquee id="marquee1" direction="left">
         <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
         Price Changes - 15 Minutes:
@@ -49,28 +47,19 @@
                         Home
                     </a>
 
-                    <a  id="HTPbtn" class="navbar-item">
+
+                    <a id="HTPbtn" class="navbar-item">
                         How to Play
                     </a>
 
-                    <div class="navbar-item has-dropdown is-hoverable">
-                        <a id="shopBtn" class="navbar-item">
-                            Shop
+                    <a id="shopBtn" class="navbar-item">
+                        Shop
+                    </a>
 
+                        <a id="superDoge" class="navbar-item">
+                            Enjoy!
                         </a>
-
-                        <div class="navbar-dropdown">
-                            <a class="navbar-item"href="howtoplay.html" >
-                                How to Play
-                            </a>
-                            <a class="navbar-item">
-                                About
-                            </a>
-                            <a class="navbar-item">
-                                Enjoy!
-                            </a>
-                            <hr class="navbar-divider">
-                        </div>
+                        <hr class="navbar-divider">
                     </div>
                 </div>
 
@@ -83,64 +72,65 @@
             </div>
         </nav>
         <h1>Crypto-Tycoon</h1>
-
-        <div class="container" id="crypto">
-            <div class="center">
-                <video width="420" height="320" controls>
-                    <source src="assets\Untitled.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
-            <button class="begin" id="startGame">Start Game</button>
-
+<div id="dogeGod">
+    <div class="container" id="crypto">
+        <div class="center">
+            <video width="420" height="320" controls>
+                <source src="assets\Untitled.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
-
-        <div id="howToPlaypge">
-            <h1>How To Play!</h1>
-            <h2 class="htp">Welcome to Crypto-Tycoon!
-                <p> The game that scratches that crypto itch!!</p>
-            </h2>
-            <p>The rules are simple!</p>
-            <p> Click the convert button to change your USD to Doge coin.</p>
-            <p> Use the shop to purchase more currency, and other upgrades that improves your conversion rates!</p>
-            <p>and the most important rule of all......HAVE FUN!!! WOOOO!!!</p>
-        </div>
-        <div id="shopContainer">
-            <h1>WELCOME TO COMPUTER PLUS!</h1>
-            <h2>VIDEO CARDS</h2>
-            <div id="container1" class="column">
-                <p ><a class="button" id="1">Asus gt 1030 2gb: $125</a></p>
-                <p ><a class="button" id="2">Asus GTX 1050Ti : $300</a></p>
-                <p ><a class="button" id="3">Asus RTX 2060 : $650</a></p>
-                <p ><a class="button" id="4">Asus 6700 XT: $1300</a></p>
-                <p ><a class="button" id="5">Saphire RX 6900: $2600</a></p>
-                <p ><a class="button" id="6">NVIDIA RTX 3080Ti: $5000</a></p>
-            </div>
-            <h2>PROCESSORS</h2>
-            <div id="container2" class="column">
-                <p ><a class="button" id="7">AMD ryzen 3: $200</a></p>
-                <p ><a class="button" id="8">AMD ryzen 5: $300</a></p>
-                <p ><a class="button" id="9">AMD ryzen 7: $400</a></p>
-                <p ><a class="button" id="10">AMD ryzen 9: $800</a></p>
-                <p ><a class="button" id="11">AMD threadripper 3960x : $1500</a></p>
-                <p ><a class="button" id="12">THA SHREDDER: $5000</a></p>
-            </div>
-            <h2>MOTHER BOARDS</h2>
-            <div id="container3" class="column">
-                <p ><a class="button" id="13">ASUS b450: $150</a></p>
-                <p ><a class="button" id="14">ASUS b550: $250</a></p>
-                <p ><a class="button" id="15">ASUS x570: $350</a></p>
-                <p ><a class="button" id="16">ASUS Godlike 570: $700</a></p>
-                <p ><a class="button" id="17">AORUS XTREME: $2000</a></p>
-                <p ><a class="button" id="18">MEGAVBOARD: $5000</a></p>
-            </div>
-        </div>
-
+        <button class="begin" id="startGame">Start Game</button>
+        
     </div>
-    <aside class="asideContainer">
-        <marquee id="marquee2" class="grids row" direction="up">
-        </marquee>
-    </aside>
+    
+    <div id="howToPlaypge">
+        <h1>How To Play!</h1>
+        <h2 class="htp">Welcome to Crypto-Tycoon!
+            <p> The game that scratches that crypto itch!!</p>
+        </h2>
+        <p>The rules are simple!</p>
+        <p> Click the convert button to change your USD to Doge coin.</p>
+        <p> Use the shop to purchase more currency, and other upgrades that improves your conversion rates!</p>
+        <p>and the most important rule of all......HAVE FUN!!! WOOOO!!!</p>
+    </div>
+    <div id="shopContainer">
+        <h1>WELCOME TO COMPUTER PLUS!</h1>
+        <h2>VIDEO CARDS</h2>
+        <div id="container1" class="column">
+            <p><a class="button" id="1">Asus gt 1030 2gb: $125</a></p>
+            <p><a class="button" id="2">Asus GTX 1050Ti : $300</a></p>
+            <p><a class="button" id="3">Asus RTX 2060 : $650</a></p>
+            <p><a class="button" id="4">Asus 6700 XT: $1300</a></p>
+            <p><a class="button" id="5">Saphire RX 6900: $2600</a></p>
+            <p><a class="button" id="6">NVIDIA RTX 3080Ti: $5000</a></p>
+        </div>
+        <h2>PROCESSORS</h2>
+        <div id="container2" class="column">
+            <p><a class="button" id="7">AMD ryzen 3: $200</a></p>
+            <p><a class="button" id="8">AMD ryzen 5: $300</a></p>
+            <p><a class="button" id="9">AMD ryzen 7: $400</a></p>
+            <p><a class="button" id="10">AMD ryzen 9: $800</a></p>
+            <p><a class="button" id="11">AMD threadripper 3960x : $1500</a></p>
+            <p><a class="button" id="12">THA SHREDDER: $5000</a></p>
+        </div>
+        <h2>MOTHER BOARDS</h2>
+        <div id="container3" class="column">
+            <p><a class="button" id="13">ASUS b450: $150</a></p>
+            <p><a class="button" id="14">ASUS b550: $250</a></p>
+            <p><a class="button" id="15">ASUS x570: $350</a></p>
+            <p><a class="button" id="16">ASUS Godlike 570: $700</a></p>
+            <p><a class="button" id="17">AORUS XTREME: $2000</a></p>
+            <p><a class="button" id="18">MEGAVBOARD: $5000</a></p>
+        </div>
+    </div>
+</div>
+</div>
+<aside class="asideContainer">
+    <marquee id="marquee2" class="grids row" direction="up">
+    </marquee>
+</aside>
+
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
