Removed Console Logs and started restructuring index

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 
         <h3 id="innerMarquee1d"></h3>
         <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
-
-
     </marquee>
     <div class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
@@ -71,9 +69,9 @@
                 </div>
             </div>
         </nav>
-        <h1>Crypto-Tycoon</h1>
 <div id="dogeGod">
     <div class="container" id="crypto">
+        <h1>Crypto-Tycoon</h1>
         <div class="center">
             <video width="420" height="320" controls>
                 <source src="assets\Untitled.mp4" type="video/mp4">
@@ -130,7 +128,13 @@
     <marquee id="marquee2" class="grids row" direction="up">
     </marquee>
 </aside>
-
+<section class="begin">
+    <div class="begin:hover" >
+        
+        <button id="shop" class="btn">shop</button>
+        <button id="convert" class="btn">convert</button>
+    </div>
+</section>
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
