--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <h1>Crypto-Tycoon</h1>
+
+                <h1 id=homeBtn>Crypto-Tycoon</h1>
                 <a class="navbar-item" href="https://bulma.io">
                 </a>
 
@@ -31,11 +32,6 @@
 
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
-                    <a id="homeBtn" class="navbar-item">
-                        Home
-                    </a>
-
-
                     <a id="HTPbtn" class="navbar-item">
                         How to Play
                     </a>
@@ -128,14 +124,6 @@
     <marquee id="marquee2" class="grids row" direction="up">
     </marquee>
 </aside> -->
-<section class="begin">
-    <div class="begin:hover" >
-        
-        <button id="shop" class="btn">shop</button>
-        <button id="convert" class="btn">convert</button>
-    </div>
-</section>
-
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
