--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <p> Click the convert button to change your USD to Doge coin.</p>
         <p> Use the shop to purchase more currency, and other upgrades that improves your conversion rates!</p>
         <p>and the most important rule of all......HAVE FUN!!! WOOOO!!!</p>
+        <p>Oh!.....ps.....Don't forget to pay your taxes! </p>
     </div>
     <div id="shopContainer">
         <h1>WELCOME TO COMPUTER PLUS!</h1>
@@ -128,13 +129,13 @@
     <marquee id="marquee2" class="grids row" direction="up">
     </marquee>
 </aside> -->
-<section class="begin">
-    <div class="begin:hover" >
-        
-        <button id="shop" class="btn">shop</button>
-        <button id="convert" class="btn">convert</button>
-    </div>
-</section>
+
+        <div class="container" id="gamebtn">
+            <button id="shop" class="shopbtn">shop</button>
+            <button id="convert" class="convertbtn">convert</button>
+        </div>
+       
+  
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
