--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <p> Click the convert button to change your USD to Doge coin.</p>
         <p> Use the shop to purchase more currency, and other upgrades that improves your conversion rates!</p>
         <p>and the most important rule of all......HAVE FUN!!! WOOOO!!!</p>
+        <p>Oh!.....ps.....Don't forget to pay your taxes! </p>
     </div>
     <div id="shopContainer">
         <h1>WELCOME TO COMPUTER PLUS!</h1>
