toggle nav fixed and dogegod fix and browser grid fix

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="navbar-item" href="https://bulma.io">
                 </a>
 
-                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false"
+                <a role="button" id="navbarBtn" class="navbar-burger" aria-label="menu" aria-expanded="false"
                     data-target="navbarBasicExample">
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
