--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container" id="crypto">
             <div class="center">
                 <video width="420" height="320" controls>
-                    <source src="assets\Untitled.mp4" type="video/mp4">
+                    <source src="./assets/Untitled.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
