Added Current Price to Ticker

--- a/index.html
+++ b/index.html
@@ -60,8 +60,11 @@
         1 Hour:
         <h3 id="innerMarquee1h"></h3>
         1 Day:
-
         <h3 id="innerMarquee1d"></h3>
+        <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
+        Current Price:
+        <h3 id="currentPriceTicker"></h3>
+        Per Coin
         <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
     </marquee>
     <div id="dogeGod">
