WOW addedgit add -A!

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <p>and the most important rule of all......HAVE FUN!!! WOOOO!!!</p>
         </div>
         <div id="shopContainer">
+            <audio src="./assets/wow.mp3" id="sound"></audio>
             <h1>WELCOME TO COMPUTER PLUS!</h1>
             <h2>VIDEO CARDS</h2>
             <div id="container1" class="column">
