all sounds added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
+            <audio src="./bensound-dance.mp3" id="backgroundSound"></audio>
             <button class="begin" id="startGame">Start Game</button>
 
         </div>
