--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
         <div class="container" id="crypto">
             <div class="center">
                 <video width="420" height="320" controls>
-                    <source src="assets\Untitled.mp4" type="video/mp4">
+                    <source src="./assets/Untitled.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
+            <audio src="./bensound-dance.mp3" id="backgroundSound"></audio>
             <button class="begin" id="startGame">Start Game</button>
 
         </div>
@@ -87,6 +88,7 @@
             <p>and the most important rule of all......HAVE FUN!!! WOOOO!!!</p>
         </div>
         <div id="shopContainer">
+            <audio src="./assets/wow.mp3" id="sound"></audio>
             <h1>WELCOME TO COMPUTER PLUS!</h1>
             <h2>VIDEO CARDS</h2>
             <div id="container1" class="column">
