--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 </video>
             </div>
             <audio src="./bensound-dance.mp3" id="backgroundSound"></audio>
+            <audio src="./dogebork.mp3" id="bork"></audio>
             <button class="begin" id="startGame">Start Game</button>
 
         </div>
