--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                     <a id="superDoge" class="navbar-item">
                         Enjoy!
                     </a>
+
+                    <a id="gameBtn" class="navbar-item">
+                        Back to Game
+                    </a>
                     <hr class="navbar-divider">
                 </div>
             </div>
