--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--linked stylesheets-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/style.css" />
+    <!--Title on page tab-->
     <title>Crypto-Tycoon</title>
 
 </head>
 
 <body>
-
+<!--Hero-->
     <div class="hero">
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
@@ -27,6 +29,8 @@
                 </a>
 
             </div>
+
+            <!--Navigation bar-->
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
                     <a id="HTPbtn" class="navbar-item">
@@ -70,6 +74,7 @@
         Per Coin
         <img id="dogeTicker" src="./assets/images/Dogecoin-ticker.jpg" />
     </marquee>
+    <!--dogeGod corresponds to the enjoy picture that pops up-->
     <div id="dogeGod">
         <div class="container" id="crypto">
             <div class="center">
@@ -78,27 +83,42 @@
                     Your browser does not support the video tag.
                 </video>
             </div>
+            <!--audio tags for background music-->
             <audio src="./bensound-dance.mp3" id="backgroundSound"></audio>
             <audio src="./dogebork.mp3" id="bork"></audio>
             <button class="begin" id="startGame">Start Game</button>
 
         </div>
+
+        <!--Game page section-->
 <section id="gamePage">
 </section>
+        <!--How to play page, with greeting and rules printout-->
         <div id="howToPlaypge">
             <h1>How To Play!</h1>
             <h2 class="htp">Welcome to Crypto-Tycoon!
                 <p> The game that scratches that crypto itch!!</p>
             </h2>
             <p>The rules are simple!</p>
+            <p> Click on each little doge coin as they move around the screen. </p>
             <p> Click the convert button to change your USD to Doge coin.</p>
             <p> Use the shop to purchase more currency, and other upgrades that improves your conversion rates!</p>
             <p>and the most important rule of all......HAVE FUN!!! WOOOO!!!</p>
+            <p>A special thank you to bensounds for the awesome background music!</p>
         </div>
+
+        <!--Shop container for shop page.-->
         <div id="shopContainer">
+            <!--Audio tag for upgrade buttons-->
             <audio src="./assets/wow.mp3" id="sound"></audio>
+
+            <!--Container greeting-->
             <h1>WELCOME TO COMPUTER PLUS!</h1>
+            
+            <!--Balance printout on screen-->
             <section id="balance"></section>
+
+            <!--Video cards section-->
             <h2>VIDEO CARDS</h2>
             <div id="container1" class="column">
                 <p><a class="button" id="1">Asus gt 1030 2gb: $125</a></p>
@@ -108,6 +128,8 @@
                 <p><a class="button" id="5">Saphire RX 6900: $2600</a></p>
                 <p><a class="button" id="6">NVIDIA RTX 3080Ti: $5000</a></p>
             </div>
+
+            <!--Processors section-->
             <h2>PROCESSORS</h2>
             <div id="container2" class="column">
                 <p><a class="button" id="7">AMD ryzen 3: $200</a></p>
@@ -117,6 +139,8 @@
                 <p><a class="button" id="11">AMD threadripper 3960x : $1500</a></p>
                 <p><a class="button" id="12">THA SHREDDER: $5000</a></p>
             </div>
+
+            <!-- Mother boards section-->
             <h2>MOTHER BOARDS</h2>
             <div id="container3" class="column">
                 <p><a class="button" id="13">ASUS b450: $150</a></p>
@@ -130,11 +154,14 @@
     </div>
 
     </div>
+    <!--marquee declaration-->
     <aside class="asideContainer">
         <marquee id="marquee2" class="grids row" direction="up">
         </marquee>
     </aside>
 </body>
+
+<!--All script tags for the game-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 <script src="./assets/script.js"></script>
